--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       img.disabled {
         opacity: 0.3;
       }
+      span {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-size: 24px;
+      }
     </style>
     <!-- Nota: cuando se despliegue, reemplazar "development.js" con "production.min.js". -->
     <script
@@ -84,9 +89,36 @@
           </picture>
         );
       };
+      function Contador() {
+        const [contadorValue, actualizarContador] = useState(40);
+        const [numeroDeVeces, actualizarVeces] = useState(0);
 
+        return (
+          <div>
+            <span>{contadorValue}</span>
+            <button
+              onClick={() => {
+                actualizarContador(contadorValue + 1);
+                actualizarVeces(numeroDeVeces + 1);
+              }}
+            >
+              Incrementar +
+            </button>
+            <button
+              onClick={() => {
+                actualizarContador(contadorValue - 1);
+                actualizarVeces(numeroDeVeces + 1);
+              }}
+            >
+              Decrementar -
+            </button>
+            <p>Veces utilizado {numeroDeVeces}</p>
+          </div>
+        );
+      }
       ReactDOM.render(
         <div>
+          <Contador />
           <AvatarB id={12} name="Ana" size="small" />
           <AvatarB id={40} />
           <AvatarB name="Anne" />
